# Vin

./: .gitignore  README.md  README_LIGHTNING_AI.md
HU_D03_03/: .gitignore  README.md  README_LIGHTNING_AI.md  pyproject.toml  scratch_check_obs.py
HU_D03_03/scripts/: csv_to_npz.py  play.py  test_xml.py  train.py
HU_D03_03/src/hu_d03_03/: __init__.py
HU_D03_03/src/hu_d03_03/robots/: __init__.py  (+1 more)
HU_D03_locomotion/: .gitignore  README.md  pyproject.toml  scratch_check_obs.py
HU_D03_locomotion/fix/: HU_D03_Locomotion_Hyperparameters_and_Reward_Theory_Analysis.md  HU_D03_Locomotion_and_Mimic_Assignment_Report.md  HU_D03_WandB_Metrics_and_Graphs_Explanation.md  fix_001_gpu_solver_and_reward_tuning.md  fix_002_unitree_comparison_setup.md  fix_003_joint_paralysis_and_reward_reconfiguration.md  fix_005_actuated_vs_passive_joint_observations.md  learnings_from_unitree_rl_mjlab.md
HU_D03_locomotion/logs/rsl_rl/hu_d03_flat_unitree/2026-05-28_12-25-39/: 2026-05-28_14-37-45.onnx
HU_D03_locomotion/logs/rsl_rl/hu_d03_flat_unitree/2026-05-28_12-25-39/git/: mujoco_hu_d03.diff
HU_D03_locomotion/scripts/: play.py  train.py
HU_D03_locomotion/src/hu_d03_locomotion/: __init__.py
HU_D03_locomotion/src/hu_d03_locomotion/robots/: hu_d03_constants.py
HU_D03_locomotion/src/hu_d03_locomotion/tasks/: __init__.py  mdp_unitree.py  rl_cfg.py  rl_unitree_cfg.py  velocity_env_cfg.py  velocity_unitree_env_cfg.py
HU_D03_locomotion3/scripts/: scratch.py
baocao/: 01_cau_truc_nen_code.md  hu_d03_migration_plan.md  implementation_plan.md  mjlab_architecture.md  walkthrough.md
(+33 files in other folders)
