[project]
name = "hu-d03-locomotion"
version = "0.1.0"
description = "Velocity tracking locomotion policy for HU_D03 humanoid robot using mjlab."
requires-python = ">=3.10"
dependencies = ["mjlab"]

[tool.uv.sources]
mjlab = { path = "../mjlab/mjlab-main", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hu_d03_locomotion"]

[tool.uv]
dev-dependencies = ["ruff", "pyright"]
